k8s/notification-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-api
  namespace: notification
spec:
  type: ClusterIP
  selector:
    app: notification-api
  ports:
    - port: 80
      targetPort: 8000
